--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Bungee&family=Luckiest+Guy&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bungee&family=Koulen&family=Luckiest+Guy&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
