--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,18 @@
     text-wrap: balance;
   }
 }
+.page-enter {
+  opacity: 0;
+}
+.page-enter-active {
+  opacity: 1;
+  transition: opacity 0.5s ease;
+}
+.page-exit {
+  opacity: 1;
+}
+.page-exit-active {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
